--- a/pages/browse-books.page.conf
+++ b/pages/browse-books.page.conf
@@ -1,4 +1,4 @@
 {
-    "title" : "Search Books",
-    "description" : "Here are all the books!"
+    "title" : "Books",
+    "description" : "Discover Inclusive Books"
 }
